--- a/src/antitrustRgulation.html
+++ b/src/antitrustRgulation.html
@@ -128,7 +128,7 @@
 
     <section class="mt-24">
         <div class="container mx-auto">
-            <div class="flex flex-row">
+            <div class="flex-1 flex-row">
                 <div class="col-md-8">
                     <p class="font-serif text-[17px] text-slate-50 font-thin tracking-normal leading-9">Адвокаты «Мейер и партнеры» 
                         сопровождают проекты своих клиентов, обеспечивая им возможность работать на конкурентных рынках. 
@@ -143,7 +143,7 @@
                     <h4 class="w-11/12 text-4xl font-semibold text-red-700 mt-10">Примерный перечень услуг в данной области:
                     </h4>
                     <ul
-                        class="flex flex-col space-y-5 list-disc ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 whitespace-pre">
+                        class="flex flex-col space-y-5 list-disc ml-12 2xl:ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 2xl:whitespace-pre">
                         <li>Консультирование по вопросам применения антимонопольного законодательства и 
                             
 законодательства о запрете недобросовестной конкуренции;</li>
@@ -165,7 +165,7 @@
                     }
                 </style>
                 <div>
-                    <div class="bg-gray-500 -mt-6">
+                    <div class="bg-gray-500 mt-28 lg:-mt-6">
                         <h2>
                             <p class="font-serif text-3xl text-white font-semibold ml-5 py-5">
                                 Практики</p>
