--- a/src/arbitrationProcess.html
+++ b/src/arbitrationProcess.html
@@ -128,7 +128,7 @@
 
     <section class="mt-24">
         <div class="container mx-auto">
-            <div class="flex flex-row">
+            <div class="flex-1 flex-row">
                 <div class="col-md-8">
                     <p class="font-serif text-[17px] text-slate-50 font-thin tracking-normal leading-9">Адвокаты «Мейер и партнеры» 
                         представляют интересы клиентов в арбитражных судах и судах общей юрисдикции всех уровней, включая Верховный Суд 
@@ -144,7 +144,7 @@
                     <h4 class="w-11/12 text-4xl font-semibold text-white mt-10">В рамках процедуры разрешения спора мы можем предложить:
                     </h4>
                     <ul
-                        class="flex flex-col space-y-5 list-disc ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 whitespace-pre">
+                        class="flex flex-col space-y-5 list-disc ml-12 2xl:ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 2xl:whitespace-pre">
                         <li>Анализ рисков возникновения конфликтной ситуации и судебного спора;</li>
                         <li>Разработать стратегию защиты клиента, оценить перспективы проекта и подготовить 
                             
@@ -159,7 +159,7 @@
                     <h4 class="w-11/12 text-4xl font-semibold text-white mt-10">Виды споров, по которым мы можем Вам помочь:
                     </h4>
                     <ul
-                        class="flex flex-col space-y-5 list-disc ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 whitespace-pre">
+                        class="flex flex-col space-y-5 list-disc ml-12 2xl:ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 2xl:whitespace-pre">
                         <li>Имущественные споры</li>
                         <li>Споры на основании договоров (контрактов)</li>
                         <li>Споры в сфере недвижимости</li>
@@ -187,7 +187,7 @@
                     }
                 </style>
                 <div>
-                    <div class="bg-gray-500 -mt-6">
+                    <div class="bg-gray-500 mt-28 lg:-mt-6">
                         <h2>
                             <p class="font-serif text-3xl text-white font-semibold ml-5 py-5">
                                 Практики</p>
