--- a/src/bankruptcy.html
+++ b/src/bankruptcy.html
@@ -131,7 +131,7 @@
 
     <section class="mt-24">
         <div class="container mx-auto">
-            <div class="flex flex-row">
+            <div class="flex-1 flex-row">
                 <div class="col-md-8">
                     <p class="font-serif text-[17px] text-slate-50 font-thin tracking-normal leading-9">Современное
                         законодательство
@@ -163,10 +163,10 @@
                     <p class="font-serif text-[17px] text-slate-50 font-thin tracking-normal leading-9">С нашей помощью
                         Вы получаете возможность эффективного прогнозирования результата
                         процедуры и существенно повышаете шансы на благоприятный для Вас исход.</p>
-                    <blockquote class="w-11/12 ml-12 bg-white py-20 px-16" style="border-left-width: 0px;">
+                    <blockquote class="w-full 2xl:w-11/12 2xl:ml-12 bg-white py-20 px-16" style="border-left-width: 0px;">
                             <span class="font-serif text-[16px] text-black font-thin tracking-normal italic">
                                 В процедуре банкротства мы знаем как:
-                                <ul class="flex flex-col space-y-6 list-disc ml-[43px] whitespace-pre">
+                                <ul class="flex flex-col space-y-6 list-disc ml-12 2xl:ml-[43px] 2xl:whitespace-pre">
                                     <li class="mt-6">Возвратить в конкурсную массу имущество должника, выведенное в
 
 преддверии банкротства;</li>
@@ -183,7 +183,7 @@
                     <h3 class="w-11/12 text-red-700">ПЕРЕЧЕНЬ УСЛУГ В РАМКАХ СОПРОВОЖДЕНИЯ ПРОЦЕДУРЫ БАНКРОТСТВА</h3>
                     <h4 class="w-11/12 text-4xl font-semibold text-white">Представление интересов должника, в рамках процедуры несостоятельности (банкротства)
                     </h4>
-                    <ul class="flex flex-col space-y-5 list-disc ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 whitespace-pre">
+                    <ul class="flex flex-col space-y-5 list-disc ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 2xl:whitespace-pre">
                         <li>Подготовка документов правового характера;</li>
                         <li>Правовая помощь по выявлению кредиторов Клиента;</li>
                         <li>Правовая помощь по ведению реестра требований кредиторов;</li>
@@ -212,7 +212,7 @@
                     </ul>
                     <h4 class="w-11/12 text-4xl font-semibold text-white mt-8">Представление интересов кредитора, в рамках процедуры несостоятельности
                         (банкротства)</h4>
-                    <ul class="flex flex-col space-y-5 list-disc ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 whitespace-pre">
+                    <ul class="flex flex-col space-y-5 list-disc ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 2xl:whitespace-pre">
                         <li>Представление интересов Клиента как кредитора в рамках дела о банкротстве в
 
 арбитражных судах всех инстанций;</li>
@@ -244,7 +244,7 @@
                         }
                     </style>
                             <div>
-                                <div class="bg-gray-500 -mt-6">
+                                <div class="bg-gray-500 mt-24 lg:-mt-6">
                                     <h2>
                                       <p class="font-serif text-3xl text-white font-semibold ml-5 py-5">
                                         Практики</p>
