--- a/src/corporateLaw.html
+++ b/src/corporateLaw.html
@@ -128,7 +128,7 @@
 
     <section class="mt-24">
         <div class="container mx-auto">
-            <div class="flex flex-row">
+            <div class="flex-1 flex-row">
                 <div class="col-md-8">
                     <p class="font-serif text-[17px] text-slate-50 font-thin tracking-normal leading-9">Одно из ключевых направлений 
                         нашей деятельности – правовая помощь в вопросах, связанных с корпоративным управлением.</p>
@@ -137,7 +137,7 @@
                     <h4 class="w-11/12 text-4xl font-semibold text-red-700 mt-10">Примерный перечень услуг:
                     </h4>
                     <ul
-                        class="flex flex-col space-y-5 list-disc ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 whitespace-pre">
+                        class="flex flex-col space-y-5 list-disc ml-12 2xl:ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 2xl:whitespace-pre">
                         <li>подготовка и анализ договоров купли-продажи бизнеса, договоров между акционерами 
                             
 и других документов, связанных с реализацией сделок;</li>
@@ -162,7 +162,7 @@
                     }
                 </style>
                 <div>
-                    <div class="bg-gray-500 -mt-6">
+                    <div class="bg-gray-500 mt-28 lg:-mt-6">
                         <h2>
                             <p class="font-serif text-3xl text-white font-semibold ml-5 py-5">
                                 Практики</p>
