--- a/src/constructionAndRealEstate.html
+++ b/src/constructionAndRealEstate.html
@@ -128,7 +128,7 @@
 
     <section class="mt-24">
         <div class="container mx-auto">
-            <div class="flex flex-row">
+            <div class="flex-1 flex-row">
                 <div class="col-md-8">
                     <p class="font-serif text-[17px] text-slate-50 font-thin tracking-normal leading-9">У нас имеется
                         большой опыт
@@ -157,7 +157,7 @@
                     <h4 class="w-11/12 text-4xl font-semibold text-red-700 mt-10">Примерный перечень услуг:
                     </h4>
                     <ul
-                        class="flex flex-col space-y-5 list-disc ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 whitespace-pre">
+                        class="flex flex-col space-y-5 list-disc ml-12 2xl:ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 2xl:whitespace-pre">
                         <li>Сопровождение сделок с недвижимостью, включая сделки по управлению недвижимостью,
 
 по установлению ипотеки в отношении земельных участков и иных объектов
@@ -167,7 +167,7 @@
                         <li>Правовое сопровождение строительной деятельности;</li>
                         <li>Споры в сфере строительства и прав на недвижимость, включая споры:</li>
                         <ul
-                            class="flex flex-col space-y-5 list-disc ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 whitespace-pre">
+                            class="flex flex-col space-y-5 list-disc ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 2xl:whitespace-pre">
                             <li>о правах на земельные участки и иное недвижимое имущество;</li>
                             <li>об оспаривании ненормативных правовых актов, решений и действий (бездействия) 
                                 
@@ -191,7 +191,7 @@
                     }
                 </style>
                 <div>
-                    <div class="bg-gray-500 -mt-6">
+                    <div class="bg-gray-500 mt-28 lg:-mt-6">
                         <h2>
                             <p class="font-serif text-3xl text-white font-semibold ml-5 py-5">
                                 Практики</p>
