--- a/src/executiveLaw.html
+++ b/src/executiveLaw.html
@@ -130,7 +130,7 @@
 
     <section class="mt-24">
         <div class="container mx-auto">
-            <div class="flex flex-row">
+            <div class="flex-1 flex-row">
                 <div class="col-md-8">
                     <p class="font-serif text-[17px] text-slate-50 font-thin tracking-normal leading-9">Одним из значимых направлений нашей 
                         деятельности является помощь клиентам в рамках исполнительного производства. Для реального исполнения должником 
@@ -142,7 +142,7 @@
                     <h4 class="w-11/12 text-4xl font-semibold text-red-700 mt-10">Наши адвокаты имеют огромную практику в области исполнительного 
                         производства и могут оказать Вам следующие услуги:
                     </h4>
-                    <ul class="flex flex-col space-y-5 list-disc ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 whitespace-pre">
+                    <ul class="flex flex-col space-y-5 list-disc ml-14 2xl:ml-[40px] font-serif text-[16px] text-slate-700 font-thin tracking-normal mt-8 2xl:whitespace-pre">
                         <li>консультации по вопросам исполнительного производства;</li>
                         <li>представление интересов физических и юридических лиц в исполнительном 
                             
@@ -176,7 +176,7 @@
                         }
                     </style>
                             <div>
-                                <div class="bg-gray-500 -mt-6">
+                                <div class="bg-gray-500 mt-28 lg:-mt-6">
                                     <h2>
                                       <p class="font-serif text-3xl text-white font-semibold ml-5 py-5">
                                         Практики</p>
