--- a/src/teachers.html
+++ b/src/teachers.html
@@ -132,7 +132,7 @@
 
     <section class="mt-24">
         <div class="container mx-auto">
-            <div class="flex flex-row">
+            <div class="flex-1 flex-row">
                 <div class="col-md-9">
                     <div class=""> <a href="../img/full_30eff7b5982035cce466f68f5d1d388d.jpg"><img
                                 src="../img/full_30eff7b5982035cce466f68f5d1d388d.jpg" alt=""></a> </div>
@@ -143,13 +143,13 @@
                             <div class="flex flex-row mt-4 ml-6">
                                 <div class="swiper-slide">
                                     <img 
-                                     src="../img/full_30eff7b5982035cce466f68f5d1d388d.jpg" alt="" class=" h-48 w-36">
+                                     src="../img/full_30eff7b5982035cce466f68f5d1d388d.jpg" alt="" class="h-48 w-36">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="../img/image_ae51d5ce896f005e644adc5dc7702fb6.jpg" alt="" class=" h-48 w-36">
+                                    <img src="../img/image_ae51d5ce896f005e644adc5dc7702fb6.jpg" alt="" class="h-48 w-36">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="../img/image_397d09ec49b022c77bb655fd170b712a.jpg" alt="" class=" h-48 w-36">
+                                    <img src="../img/image_397d09ec49b022c77bb655fd170b712a.jpg" alt="" class="h-48 w-36">
                                 </div>
                             </div>
                         </div>
@@ -158,7 +158,7 @@
 
 
                     <h3 class="font-serif text-4xl text-white font-semibold mt-10">XII ежегодный конкурс студенческих работ им. Д. И. Мейера</h3>
-                    <div class="font-sans text-2xl text-black font-semibold tracking-wide ml-6 mt-6 mb-8">
+                    <div class="font-sans text-2xl text-black font-semibold tracking-wide 2xl:ml-6 mt-6 mb-8">
                         <ul>
                             <li>30.06.2021 </li>
                         </ul>
@@ -208,7 +208,7 @@
                         </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="bg-gray-500/70 -mt-8">
+                    <div class="bg-gray-500/70 mt-28 lg:-mt-8">
                         <h2>
                           <p class="font-serif text-3xl text-white font-semibold ml-5 py-5">
                             Последние новости</p>
