--- a/src/archive.html
+++ b/src/archive.html
@@ -131,8 +131,6 @@
 
 
 
-
-
         <section class="mt-24">
             <div class="container mx-auto">
                 <div class="col-md-9">
@@ -199,7 +197,7 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <div class="bg-gray-500/70 -mt-8">
+                    <div class="bg-gray-500/70 mt-24 lg:-mt-8">
                         <h2>
                             <p class="font-serif text-3xl text-white font-semibold ml-5 py-5">
                                 Последние новости</p>
