--- a/src/biroto.html
+++ b/src/biroto.html
@@ -132,7 +132,7 @@
 
     <section class="mt-24">
         <div class="container mx-auto">
-            <div class="flex flex-row">
+            <div class="flex-1 flex-row">
                 <div class="col-md-9">
                     <div class=""> <a href="../img/full_26a226bde764cf571dd532e1a9ca9c29.jpg"><img
                                 src="../img/full_26a226bde764cf571dd532e1a9ca9c29.jpg" alt=""></a> </div>
@@ -141,7 +141,7 @@
                     <h3 class="font-serif text-4xl text-white font-semibold mt-16">«История величия и падения Цезаря
                         Бирото»</h3>
                     <div class="bg-gray-500/70">
-                        <div class="font-sans text-2xl text-black font-semibold tracking-wide mt-6 mr-[743px] mb-8">
+                        <div class="font-sans text-2xl text-black font-semibold tracking-wide mt-6 mr-[233px] sm:mr-[497px] md:mr-[607px] lg:mr-[593px] xl:mr-[743px] mb-8">
                             <ul>
                                 <li class="px-5 border border-white">12.08.16</li>
                             </ul>
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="bg-gray-500/70 -mt-8">
+                    <div class="bg-gray-500/70 mt-28 lg:-mt-8">
                         <h2>
                             <p class="font-serif text-3xl text-white font-semibold ml-5 py-5">
                                 Последние новости</p>
