Исправил панель навигации. Добавил вкладку команда.

--- a/src/bankruptcy.html
+++ b/src/bankruptcy.html
@@ -79,11 +79,15 @@
 													О нас
 													</a>
 												</li>
+												<li><a href="index.html">
+													Команда
+													</a>
+												</li>
 												<li><a href="ourSkill.html">
 													Наш опыт
 													</a>
 												</li>
-												<li><a href="news.html">
+												<li><a class="" href="news.html">
 													Новости
 													</a>
 												</li>
@@ -92,13 +96,9 @@
 													факты
 													</a>
 												</li>
-												<li><a href="search.html">
-													Поиск
-													</a>
-												</li>
 											</ul>
 											<ul id="nav" class="navbar-nav navbar-nav-second">
-												<li><a href="proBono.html">
+												<li class="active"><a href="proBono.html">
 														Pro bono
 													</a>
 												</li>
@@ -108,6 +108,10 @@
 												</li>
 												<li><a href="conkursMayera.html">
 														Конкурс «Мейера»
+													</a>
+												</li>
+												<li><a href="search.html">
+													Поиск
 													</a>
 												</li>
 												<li><a href="contacts.html">
