--- a/src/proBono.html
+++ b/src/proBono.html
@@ -78,6 +78,10 @@
 													О нас
 													</a>
 												</li>
+												<li><a href="index.html">
+													Команда
+													</a>
+												</li>
 												<li><a href="ourSkill.html">
 													Наш опыт
 													</a>
@@ -89,10 +93,6 @@
 												<li><a href="interestsFacts.html">
 													Интересные
 													факты
-													</a>
-												</li>
-												<li><a href="search.html">
-													Поиск
 													</a>
 												</li>
 											</ul>
@@ -107,6 +107,10 @@
 												</li>
 												<li><a href="conkursMayera.html">
 														Конкурс «Мейера»
+													</a>
+												</li>
+												<li><a href="search.html">
+													Поиск
 													</a>
 												</li>
 												<li><a href="contacts.html">
