Исправил страницу Конкурсы. TODO: заменить bootstrap на tailwind

--- a/src/proBono.html
+++ b/src/proBono.html
@@ -7,7 +7,7 @@
   <title>Pro bono</title>
 
 
-  <link href="../dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
     <link href="../script.css" rel="stylesheet">
     <link href="../swiper/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../swiper/tailwind.css">
@@ -22,7 +22,8 @@
 
 
 <body class="flex flex-col cp-theme-style-1">
-	<header inset-0 h-12 id="header">
+	<div class="wrapper">
+		<header inset-0 h-12 id="header">
 			<section class="cp-head-topbar">
 				<div class="container mx-auto">
 					<div class="row">
@@ -361,7 +362,7 @@
 			</div>
 
 		</div>
-</div>
+	</div>
 
 <script src="../swiper/tailwind.js"></script>
 
