--- a/src/news.html
+++ b/src/news.html
@@ -140,7 +140,7 @@
 			</div>
 
 
-			<div id="main">
+			<div id="main_2">
 				<section class="cp-blog padding-top-60 news-page-bg-new">
 					<div class="container">
 
@@ -178,74 +178,108 @@
 		</div>
 
 		<footer>
-			<section class="cp-navigation-sectio">
-				<div class="container mx-auto">
+			<section class="cp-footer-content">
+				<div class="container-fluid container">
 					<div class="row">
-						<div class="col-md-5">
-							<strong class="logo" text-center><a href="index.html"><img src="../img/logo.png"
-										alt="img"></a>
-							</strong>
+						<div class="footer-reward">
+							<div class="col-md-3 col-sm-3">
+								<div class="col-md-6 col-sm-6 col-xs-6">
+									<img class="footer-reward-left-img" src="../img/brand-1.png">
+								</div>
+								<div class="col-md-6 col-sm-6 col-xs-6">
+									<img class="footer-reward-right-img" src="../img/brand-2.png">
+								</div>
+								<div class="col-md-12 col-sm-6">
+									<img src="../img/brand-3.png">
+									<div style="clear: both;"></div>
+								</div>
+							</div>
 						</div>
-						<div class="col-md-7">
-							<div class="navigation-right">
-								<div class="cp-burger-nav">
-									<nav class="navbar navbar-inverse">
-										<div class="navbar-header">
-											<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-											aria-expanded="false" aria-controls="navbar">
-												<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
-												class="icon-bar"></span> <span class="icon-bar"></span> </button>
-										</div>
-										<div id="navbar" class="collapse navbar-collapse">
-											<div style="display:none;">
-											</div>
-											<ul id="nav" class="navbar-nav navbar-nav-first">
-												<li><a href="index.html">
-													О нас
-													</a>
-												</li>
-												<li><a href="index.html">
-													Команда
-													</a>
-												</li>
-												<li><a href="ourSkill.html">
-													Наш опыт
-													</a>
-												</li>
-												<li><a class="" href="news.html">
-													Новости
-													</a>
-												</li>
-												<li><a href="interestsFacts.html">
-													Интересные
-													факты
-													</a>
-												</li>
-											</ul>
-											<ul id="nav" class="navbar-nav navbar-nav-second">
-												<li class="active"><a href="proBono.html">
-														Pro bono
-													</a>
-												</li>
-												<li><a href="reviews.html">
-														Отзывы
-													</a>
-												</li>
-												<li><a href="conkursMayera.html">
-														Конкурс «Мейера»
-													</a>
-												</li>
-												<li><a href="search.html">
-													Поиск
-													</a>
-												</li>
-												<li><a href="contacts.html">
-														Контакты
-													</a>
-												</li>
-											</ul>
-										</div>
-									</nav>
+
+						<div class="col-md-9 col-sm-9">
+							<div class="col-md-3 col-sm-3 foot-col-3">
+								<nav class="navbar">
+									<ul class="navbar-nav list-inline foot foot-nav-list">
+										<li>
+											<a href="bankruptcy.html">
+												Банкротство
+											</a>
+										</li>
+										<li>
+											<a href="executiveLaw.html">
+												Исполнительное право
+											</a>
+										</li>
+										<li>
+											<a href="arbitrationProcess.html">
+												Арбитражный процесс
+											</a>
+										</li>
+										<li>
+											<a href="nalog.html">
+												Налоговое право
+											</a>
+										</li>
+									</ul>
+								</nav>
+							</div>
+							<div class="col-md-6 col-sm-6 foot-col-6">
+								<nav class="navbar">
+									<ul class="navbar-nav list-inline foot foot-nav-list">
+										<li>
+											<a href="constructionAndRealEstate.html">
+												Строительство и недвижимость
+											</a>
+										</li>
+										<li>
+											<a href="antitrustRgulation.html">
+												Антимонопольное регулирование
+											</a>
+										</li>
+										<li>
+											<a href="energy.html">
+												Природные ресурсы. Энергетика
+											</a>
+										</li>
+										<li>
+											<a href="corporateLaw.html">
+												Корпоративное право
+											</a>
+										</li>
+									</ul>
+								</nav>
+							</div>
+							<div class="col-md-3 col-sm-3 foot-col-3 text-center">
+								<div class="col-md-6 col-sm-12 col-xs-12">
+									<noindex>
+										<a href="http://www.fparf.ru/" rel="nofollow" target="_blank">
+											<img src="../img/gerb.png"> 
+										</a>
+									</noindex>
+								</div>
+								<div class="col-md-6 col-sm-12 col-xs-12">
+									<noindex>
+										<a href="http://www.apvo-volgograd.ru/" rel="nofollow" target="_blank">
+											<img src="../img/logo-(1).png"> 
+										</a>
+									</noindex>
+								</div>
+								<div class="col-md-12 col-sm-12 col-xs-12">
+										<a href="https://www.facebook.com/lawmeyer/" target="_blank" title="Официальная страница нашей компании на Facebook" class="link-facebook">
+											<i class="fa fa-facebook" aria-hidden="true">
+											</i> Facebook
+										</a>	
+								</div>
+							</div>
+
+							<div class="col-md-12 col-sm-12">
+								<div class="col-md-6 col-sm-6">
+									<div class="cp-contacts-section"> 400001, г. Волгоград, ул. Профсоюзная,
+										15а.<br> info@meyer-law.ru</div>
+								</div>
+								<div class="col-md-6 col-sm-6">
+									<div class="cp-copyright-section"> <strong class="copy">Адвокаты, Волгоград<br>
+											© «Мейер и партнеры»</strong> </div>
 								</div>
 							</div>
 						</div>
