Исправил фоны на страницах Новости и Интересные факты

--- a/src/interestsFacts.html
+++ b/src/interestsFacts.html
@@ -128,16 +128,16 @@
 			<div id="inner-banner">
 				<div class="container mx-auto">
 					<h1 class="flex justify-center">
-							Новости
+							Интересные факты
 					</h1>
 					<ol class="breadcrumb">
 						<li><a href="index.html">Главная</a></li>
-						<li class="active">Новости</li>
+						<li class="active">Интересные факты</li>
 					</ol>
 				</div>
 			</div>
 
-			<div id="main_1">
+			<div id="main_2">
 				<section class="cp-blog padding-top-60 news-page-bg-new">
 					<div class="container mx-auto space-y-12">
 						<p>
@@ -153,15 +153,15 @@
 							показана так,
 							как будто события произошли не много лет назад, а в наше время.
 						</p>
-						<div style="height:50px; display:block;"></div>
+						<div style="height:1px; display:block;"></div>
 						<div class="col-md-12">
 							<div class="cp-tweet-box">
 								<div class="row">
 									<div class="col-md-5">
 										<div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/295';">
-											<a href="http://www.meyer-law.ru/news/295">
-												<img
-													src="../img/anounce_d1aea1b1605890e785822157dc78a7cb.jpg">
+											<img src="../img/anounce_d1aea1b1605890e785822157dc78a7cb.jpg">
+											<a href="http://www.meyer-law.ru/news/295" class="link">
+												<i class="fa fa-link"></i>
 											</a>
 										</div>
 									</div>
@@ -308,6 +308,7 @@
 		</div>
 	</div>
 
-    <script src="../swiper/tailwind.js"></script>
+	<script src="../swiper/custom.js"></script>
+	<script src="../swiper/tailwind.js"></script>
 
-    </html>
+</html>
