--- a/src/news.html
+++ b/src/news.html
@@ -290,7 +290,8 @@
 		
 	</div>
 
-    <script src="../swiper/tailwind.js"></script>
+	<script src="../swiper/custom.js"></script>
+	<script src="../swiper/tailwind.js"></script>
 
 
 </html>
