Подключил custom.js к страницам, где он еще не был подключен

--- a/src/bankruptcy.html
+++ b/src/bankruptcy.html
@@ -444,7 +444,8 @@
 
 		
 		</div>
-
+		
+		<script src="../swiper/custom.js"></script>
 		<script src="../swiper/tailwind.js"></script>
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C900%2C300italic%2C400italic%2C700italic" type="text/css">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans%3A400%2C700&amp;subset=cyrillic%2Clatin&amp;" type="text/css">
