--- a/src/proBono.html
+++ b/src/proBono.html
@@ -364,7 +364,8 @@
 		</div>
 	</div>
 
-<script src="../swiper/tailwind.js"></script>
+	<script src="../swiper/custom.js"></script>
+	<script src="../swiper/tailwind.js"></script>
 
 </body>
 
