Исправлены плейсхолдеры в форме на странице Контактов

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -147,7 +147,7 @@
 
                                                     <div class="xl:col-span-6 lg:col-span-6 md:col-span-12 col-span-12 px-[15px]">
                                                         <input
-                                                            class="float-left w-full h-[40px] border-[1px] border-solid 
+                                                            class="placeholder:text-[#666] placeholder:opacity-70 float-left w-full h-[40px] border-[1px] border-solid 
                                                             border-[#c1c1c1] px-[20px] box-border mb-[30px] font-Futura 
                                                             text-[14px] leading-[14px] font-normal text-[#666]"
                                                             type="text" placeholder="Ваше имя *">
@@ -155,7 +155,7 @@
 
                                                     <div class="xl:col-span-6 lg:col-span-6 md:col-span-12 col-span-12 px-[15px]">
                                                         <input
-                                                            class="float-left w-full h-[40px] border-[1px] border-solid 
+                                                            class="placeholder:text-[#666] placeholder:opacity-70 float-left w-full h-[40px] border-[1px] border-solid 
                                                             border-[#c1c1c1] px-[20px] box-border mb-[30px] font-Futura 
                                                             text-[14px] leading-[14px] font-normal text-[#666]" type="text"
                                                             placeholder="Ваша Фамилия *">
@@ -163,7 +163,7 @@
 
                                                     <div class="xl:col-span-6 lg:col-span-6 md:col-span-12 col-span-12 px-[15px]">
                                                         <input
-                                                            class="float-left w-full h-[40px] border-[1px] border-solid 
+                                                            class="placeholder:text-[#666] placeholder:opacity-70 float-left w-full h-[40px] border-[1px] border-solid 
                                                             border-[#c1c1c1] px-[20px] box-border mb-[30px] font-Futura 
                                                             text-[14px] leading-[14px] font-normal text-[#666]" type="text"
                                                             placeholder="Ваша электронная почта *"
@@ -172,7 +172,7 @@
 
                                                     <div class="xl:col-span-6 lg:col-span-6 md:col-span-12 col-span-12 px-[15px]">
                                                         <input
-                                                            class="float-left w-full h-[40px] border-[1px] border-solid 
+                                                            class="placeholder:text-[#666] placeholder:opacity-70 float-left w-full h-[40px] border-[1px] border-solid 
                                                             border-[#c1c1c1] px-[20px] box-border mb-[30px] font-Futura 
                                                             text-[14px] leading-[14px] font-normal text-[#666]" type="text"
                                                             placeholder="Тема *">
