--- a/src/reviews.html
+++ b/src/reviews.html
@@ -178,6 +178,42 @@
                             <li class="item width2 height2 col-md-6" style="position: absolute; left: 0px; top: 0px;">
                                 <div class="cp-box">
                                     <div class="frame"> <img
+                                            src="https://img1.fonwall.ru/o/qi/anime-girl-profile-view-choker-short-hair.jpeg"
+                                            alt="img">
+                                        <div class="caption"> <a
+                                                href="../img/diplom-chambers.jpg"
+                                                data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i
+                                                    class="fa fa-search-plus"></i></a> </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="item width2 height2 col-md-6" style="position: absolute; left: 0px; top: 0px;">
+                                <div class="cp-box">
+                                    <div class="frame"> <img
+                                            src="https://i.pinimg.com/originals/cc/a9/f5/cca9f5845c889ed4b6605fc99a62b1ac.jpg"
+                                            alt="img">
+                                        <div class="caption"> <a
+                                                href="../img/diplom-chambers.jpg"
+                                                data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i
+                                                    class="fa fa-search-plus"></i></a> </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="item width2 height2 col-md-6" style="position: absolute; left: 0px; top: 0px;">
+                                <div class="cp-box">
+                                    <div class="frame"> <img
+                                            src="https://www.meme-arsenal.com/memes/413846a156f1ca2aef81652d8aaa1b13.jpg"
+                                            alt="img">
+                                        <div class="caption"> <a
+                                                href="../img/diplom-chambers.jpg"
+                                                data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i
+                                                    class="fa fa-search-plus"></i></a> </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="item width2 height2 col-md-6" style="position: absolute; left: 0px; top: 0px;">
+                                <div class="cp-box">
+                                    <div class="frame"> <img
                                             src="../img/diplom-chambers.jpg"
                                             alt="img">
                                         <div class="caption"> <a
@@ -372,10 +408,6 @@
                 </div>
             </div>
         </section>
-
-
-
-
 
 
     <footer class="mt-24">
