--- a/src/reviews.html
+++ b/src/reviews.html
@@ -16,9 +16,17 @@
     <link rel="stylesheet" href="../masonry/masonry.pkgd.css">
     <link rel="stylesheet" href="../swiper/color.css">
     <link href="../swiper/responsive.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../src/prettyPhoto.css">
 
 
     <script src="../swiper/jquery-1.11.3.min.js"></script>
+    <script src="../src/jquery.prettyPhoto.js"></script>
+    <script type="text/javascript" >
+        $(document).ready(function(){
+            $("a[rel^='prettyPhoto']").prettyPhoto();
+        });
+    </script>
+    
 </head>
 
 <body class="flex flex-col bg-gray-200">
@@ -174,43 +182,7 @@
             <div class="container mx-auto">
                 <div class="flex-row">
                     <div class="cp-gallery-metro-1 gallery-grid gallery">
-                        <ul class="cp-grid isotope items" style="position: relative; height: 2078.63px;">
-                            <li class="item width2 height2 col-md-6" style="position: absolute; left: 0px; top: 0px;">
-                                <div class="cp-box">
-                                    <div class="frame"> <img
-                                            src="https://img1.fonwall.ru/o/qi/anime-girl-profile-view-choker-short-hair.jpeg"
-                                            alt="img">
-                                        <div class="caption"> <a
-                                                href="../img/diplom-chambers.jpg"
-                                                data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i
-                                                    class="fa fa-search-plus"></i></a> </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="item width2 height2 col-md-6" style="position: absolute; left: 0px; top: 0px;">
-                                <div class="cp-box">
-                                    <div class="frame"> <img
-                                            src="https://i.pinimg.com/originals/cc/a9/f5/cca9f5845c889ed4b6605fc99a62b1ac.jpg"
-                                            alt="img">
-                                        <div class="caption"> <a
-                                                href="../img/diplom-chambers.jpg"
-                                                data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i
-                                                    class="fa fa-search-plus"></i></a> </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="item width2 height2 col-md-6" style="position: absolute; left: 0px; top: 0px;">
-                                <div class="cp-box">
-                                    <div class="frame"> <img
-                                            src="https://www.meme-arsenal.com/memes/413846a156f1ca2aef81652d8aaa1b13.jpg"
-                                            alt="img">
-                                        <div class="caption"> <a
-                                                href="../img/diplom-chambers.jpg"
-                                                data-rel="prettyPhoto[]" class="zoom" rel="prettyPhoto[]"><i
-                                                    class="fa fa-search-plus"></i></a> </div>
-                                    </div>
-                                </div>
-                            </li>
+                        <ul class="cp-grid isotope items" style="position: relative; height: 2078.63px;">                       
                             <li class="item width2 height2 col-md-6" style="position: absolute; left: 0px; top: 0px;">
                                 <div class="cp-box">
                                     <div class="frame"> <img
