Команда с бутстрапом (только Олег Коробов)

--- a/src/team.html
+++ b/src/team.html
@@ -15,6 +15,7 @@
     <link href="../swiper/responsive.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../src/hexagons.css">
     <link rel="stylesheet" href="../src/fancybox.css">
+    <link rel="stylesheet" href="../swiper/tailwind.css">
 
     <script src="../swiper/jquery-1.11.3.min.js"></script>
 
@@ -147,8 +148,8 @@
                         <a class="hexIn" href="http://www.meyer-law.ru/people/9">
                             <img src="http://www.meyer-law.ru/core/images/team/c7588853d975607658e9c3a1aa5a0dc0.jpg"
                                 alt="Олег Коробов">
-                            <h1 class="">Олег Коробов</h1>
-                            <p class="text-[18px]">к. ю. н., адвокат, управляющий партнер</p>
+                            <h1 class="m-0 text-white">Олег Коробов</h1>
+                            <p class="text-[18px] text-white font-Futuris">к. ю. н., адвокат, управляющий партнер</p>
                         </a>
                     </li>
                     <li class="hex">
